# SatorOptimizer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SATOR_OS_Engine_Arhitecture_Plan.md  SECURITY.md  pyproject.toml  requirements-cuda.txt  requirements.txt
.github/workflows/: ci.yml
docs/: advanced_numerical_settings.md  api_reference.md  index.md  known_bugs.md  local_tls_certs.md  objectives.md  openapi.yaml  operations.md  optimization_pipeline.md  quickstart.md
docs/design/: architecture.md  reconstruction.md
examples/: how_to_run_examples.md  http_chem_pca_optimize_visualize.py  http_visualize_branin.py  plot_branin_surface3d.py
examples/requests/: optimize_basic.json  optimize_sum_to_one.json
sator_os_engine/: settings.py
sator_os_engine/api/: app.py  deps.py  errors.py
sator_os_engine/encoding/: pca.py
sator_os_engine/observability/: logging.py
sator_os_engine/reconstruction/: slsqp_reconstructor.py
sator_os_engine/runtime/: executor.py  jobs.py
sator_os_engine/security/: api_keys.py  idempotency.py  ip_filters.py  rate_limit.py
sator_os_engine/server/: __main__.py  main.py
sator_os_engine/transports/: nats.py
tests/: how_to_run_tests.md
tests/integration/: test_api_endpoints.py  test_health_and_auth.py
tests/system/: test_visualization_surface.py
tests/unit/: test_acquisition_multi.py  test_acquisition_single.py  test_constraints_enforcement.py  test_engine_orchestrator.py  test_error_paths.py  test_gp_models_and_bounds.py  test_maps.py  test_mo_goals_pca.py  test_preprocess_pca.py  (+1 more)
(+11 files in other folders)
